Update SimpleJsonConfig.java